fix spacing & styling vcard icons

--- a/src/assets/styles/components/_icon.scss
+++ b/src/assets/styles/components/_icon.scss
@@ -9,7 +9,8 @@
     margin-right: 0.35em;
 }
 
-.vcard__contact .icon {
+.vcard__contact .icon,
+.vcard__links .icon {
     height: 1.5em;
     width: 1.5em;
     pointer-events: none;
@@ -18,5 +19,5 @@
 .entry .icon {
     height: 0.7em;
     width: 0.7em;
-    margin-right: -0.3em; 
+    margin-right: -0.3em;
 }
